Remove conflicting legacy CSS for guide modal to enforce Notion styling

--- a/index.html
+++ b/index.html
@@ -601,15 +601,7 @@
             border-bottom: 1px solid #eee;
         }
 
-        .guide-modal-body .content {
-            font-size: 1.05rem;
-            line-height: 1.9;
-            color: #333;
-        }
-
-        .guide-modal-body .content p {
-            margin-bottom: 1.5em;
-        }
+        /* Legacy styles removed to use Notion Styles below */
 
         .guide-modal-body .content h2 {
             margin: 2em 0 1em;
