--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
             border-radius: 16px;
             overflow: hidden;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
-            background: #e0e0e0;
-            aspect-ratio: 4/3;
+            background: #f8f8f8;
+            min-height: 300px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -299,8 +299,9 @@
 
         .feature-image img {
             width: 100%;
-            height: 100%;
-            object-fit: cover;
+            height: auto;
+            max-height: 800px;
+            object-fit: contain;
         }
 
         .feature-image-placeholder {
