--- a/index.html
+++ b/index.html
@@ -705,6 +705,18 @@
             .column-grid {
                 grid-template-columns: 1fr;
             }
+
+            .feature-image {
+                min-height: 200px;
+                height: auto;
+                aspect-ratio: auto;
+            }
+
+            .feature-image img {
+                height: auto;
+                max-height: 600px;
+                object-fit: contain;
+            }
         }
 
         /* Responsive Line Breaks */
