Revert feature image style to 4:3 crop (cover) as requested

--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
             border-radius: 16px;
             overflow: hidden;
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.1);
-            background: #f8f8f8;
-            min-height: 300px;
+            background: #e0e0e0;
+            aspect-ratio: 4/3;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -299,9 +299,8 @@
 
         .feature-image img {
             width: 100%;
-            height: auto;
-            max-height: 800px;
-            object-fit: contain;
+            height: 100%;
+            object-fit: cover;
         }
 
         .feature-image-placeholder {
@@ -704,18 +703,6 @@
 
             .column-grid {
                 grid-template-columns: 1fr;
-            }
-
-            .feature-image {
-                min-height: 200px;
-                height: auto;
-                aspect-ratio: auto;
-            }
-
-            .feature-image img {
-                height: auto;
-                max-height: 600px;
-                object-fit: contain;
             }
         }
 
