인쇄시 _페이지수정

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2581,6 +2581,8 @@
             body {
                 background: white;
                 font-size: 11px !important;
+                zoom: 0.75;
+                -webkit-print-color-adjust: exact !important;
             }
 
             .main-layout {
