인쇄시 간격 조정

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2759,10 +2759,20 @@
 
             /* 정보 그리드 */
             .info-grid {
-                gap: 6px !important;
+                gap: 12px !important;
+                /* 간격 넓힘 */
                 display: grid !important;
                 grid-template-columns: repeat(2, 1fr) !important;
                 width: 100% !important;
+            }
+
+            /* 섹션 간격 넓힘 */
+            .section {
+                margin-bottom: 24px !important;
+            }
+
+            .section-title {
+                margin-bottom: 12px !important;
             }
 
             .info-grid.cols-3 {
