--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2605,9 +2605,24 @@
                 border-radius: 0 !important;
                 page-break-after: always;
                 margin: 0 !important;
-                padding: 10px !important;
+                padding: 24px !important;
+                /* 내부 여백 증가 */
                 width: 100% !important;
                 max-width: none !important;
+            }
+
+            /* 헤더 스타일 인쇄용 조정 */
+            .doc-header {
+                padding: 24px !important;
+                margin: -24px -24px 24px -24px !important;
+                background-color: #0071e3 !important;
+                /* 배경색 강제 적용 */
+                -webkit-print-color-adjust: exact !important;
+                color: white !important;
+            }
+
+            .doc-header h1 {
+                margin-bottom: 4px !important;
             }
 
             /* 테이블 전체 너비 사용 */
@@ -3201,7 +3216,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1>고객 정보</h1>
                                 <div class="subtitle">Customer Information</div>
                             </div>
@@ -3384,7 +3399,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1>인테리어 공사 도급계약서</h1>
                                 <div class="subtitle">Interior Construction Contract</div>
                             </div>
@@ -3527,7 +3542,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1>공사도급 표지계약서</h1>
                                 <div class="subtitle">Construction Contract Summary</div>
                             </div>
@@ -3606,7 +3621,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1>계약 견적서</h1>
                                 <div class="subtitle">Contract Estimate</div>
                             </div>
@@ -3662,7 +3677,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1>공사 원가관리표</h1>
                                 <div class="subtitle">Construction Cost Management</div>
                             </div>
@@ -3748,7 +3763,7 @@
                             <div>
                                 <div
                                     style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px; color:#0071e3;">
-                                    Design Jig</div>
+                                    DESIGN JIG</div>
                                 <h1 style="font-size:24px; font-weight:700; color:#1d1d1f; margin:0;">📅 공사 스케줄 관리</h1>
                                 <div class="subtitle" style="font-size:13px; color:#86868b; margin-top:4px;">
                                     Construction Schedule Manager</div>
