인쇄부분 수정

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2603,12 +2603,13 @@
             .document-wrapper {
                 box-shadow: none !important;
                 border-radius: 0 !important;
-                page-break-after: always;
+                page-break-after: auto !important;
                 margin: 0 !important;
                 padding: 24px !important;
                 /* 내부 여백 증가 */
                 width: 100% !important;
                 max-width: none !important;
+                min-height: 0 !important;
             }
 
             /* 헤더 스타일 인쇄용 조정 */
