관리자-고객카드수정

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2869,6 +2869,14 @@
                 font-size: 10px !important;
             }
 
+            /* 대금 지급 한 줄로 표시 */
+            .payment-grid {
+                display: grid !important;
+                grid-template-columns: repeat(5, 1fr) !important;
+                gap: 8px !important;
+                width: 100% !important;
+            }
+
             .clause-content {
                 font-size: 9px !important;
             }
