스케줄-인쇄

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3780,7 +3780,7 @@
 
                 <!-- 스케줄 관리 패널 -->
                 <div class="tab-panel" id="panel-schedule">
-                    <div class="document-wrapper"
+                    <div class="document-wrapper" id="scheduleDoc"
                         style="max-width:1000px; margin:0 auto; background:#fff; box-shadow:0 4px 20px rgba(0,0,0,0.08); border-radius:12px; overflow:hidden;">
                         <div class="doc-header"
                             style="padding:30px; background:#fff; border-bottom:1px solid #f2f2f7; display:flex; justify-content:space-between; align-items:center;">
@@ -3794,6 +3794,8 @@
                             </div>
                             <div style="display:flex; flex-direction:column; align-items:flex-end; gap:8px;">
                                 <div style="display:flex; gap:8px;">
+                                    <button class="pdf-btn" onclick="downloadPDF('scheduleDoc', '공사스케줄')">🖨️
+                                        인쇄/PDF</button>
                                     <button class="btn btn-secondary btn-sm" onclick="addScheduleRow()">➕ 공정 추가</button>
                                 </div>
                             </div>
