--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -2648,6 +2648,55 @@
                 width: auto !important;
             }
 
+            /* 인쇄 시 숨김 */
+            .no-print {
+                display: none !important;
+            }
+
+            /* 스케줄 관리 패널 인쇄 설정 */
+            #panel-schedule .data-table th:last-child,
+            #panel-schedule .data-table td:last-child {
+                display: none !important;
+            }
+
+            /* 스케줄 테이블 컬럼 너비 조정 (인쇄용) */
+            #panel-schedule .data-table th:nth-child(1),
+            #panel-schedule .data-table td:nth-child(1) {
+                width: 5% !important;
+            }
+
+            /* No */
+            #panel-schedule .data-table th:nth-child(2),
+            #panel-schedule .data-table td:nth-child(2) {
+                width: 30% !important;
+            }
+
+            /* 공정명 */
+            #panel-schedule .data-table th:nth-child(3),
+            #panel-schedule .data-table td:nth-child(3) {
+                width: 15% !important;
+            }
+
+            /* 시작일 */
+            #panel-schedule .data-table th:nth-child(4),
+            #panel-schedule .data-table td:nth-child(4) {
+                width: 15% !important;
+            }
+
+            /* 종료일 */
+            #panel-schedule .data-table th:nth-child(5),
+            #panel-schedule .data-table td:nth-child(5) {
+                width: 10% !important;
+            }
+
+            /* 담당자 */
+            #panel-schedule .data-table th:nth-child(6),
+            #panel-schedule .data-table td:nth-child(6) {
+                width: 25% !important;
+            }
+
+            /* 비고 */
+
             /* 품명 - 나머지 공간 차지 */
             .data-table .col-spec {
                 width: 80px !important;
@@ -3799,7 +3848,7 @@
                             </div>
                         </div>
                         <div class="doc-content" style="padding:30px;">
-                            <div
+                            <div class="no-print"
                                 style="background:#f0f7ff; padding:12px 16px; border-radius:8px; margin-bottom:16px; font-size:13px; color:#004182; border:1px solid #c2e0ff;">
                                 <strong>💡 사용법:</strong> 공정을 추가한 후 날짜/담당자를 입력하세요. 드래그로 순서 변경이 가능합니다.
                             </div>
