--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3842,7 +3842,7 @@
                             <div style="display: flex; gap: 8px; align-items: center;">
                                 <button class="pdf-btn" onclick="downloadPDF('scheduleDoc', '공사스케줄')">🖨️
                                     인쇄/PDF</button>
-                                <button class="btn btn-secondary btn-sm" onclick="addScheduleRow()"
+                                <button class="btn btn-secondary btn-sm no-print" onclick="addScheduleRow()"
                                     style="background: rgba(255,255,255,0.2); color:white; border:none;">➕ 공정
                                     추가</button>
                             </div>
